@@ -1,3 +1,9 @@
+Fri Aug 08 23:09:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Groups marked with their collapsed attribute as FALSE are now
+	    expanded when first set up.
+
 Fri Aug 08 23:01:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/main.cpp:
